--- a/assignment/style.css
+++ b/assignment/style.css
@@ -1,11 +1,60 @@
+
+/* Set the margin, padding, boxsizing*/
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 /* Give your page a fun background color */
+body{
+    background-color: #85dcb8;
+}
 
 /* Make the header and footer a different color from the background */
 
+h1, footer{
+    background-color: #E27D60;
+    width: 100%;
+}
+
+
 /* Align the h1 containing your name in the center of the header*/
+h1{
+    text-align: center;
+}
 
 /* Make your p tag a different color and italic */
 
+p{
+    font-style: italic;
+    color: #fff;
+}
+
 /* Put a border around your image */
+img{
+    border-style: solid;
+    border-color: #ff0000;
+    height: 320px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
 
 /* Change the font-family of your list */
+
+li{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+/* make the footer to be at the bottom*/
+footer{
+   position: fixed;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   bottom: 0;
+   height: 60px;
+   
+}
+footer p {
+    color:  black;
+}
